build.log

> temp-portfolio@0.1.0 build
> next build

▲ Next.js 16.2.3 (Turbopack)

  Creating an optimized production build ...
Error: Cannot apply unknown utility class `before:rounded-inherit`
    [2m[at onInvalidCandidate (/Users/arunsudhaveni/Desktop/MY PORTFLIO/node_modules/tailwindcss/dist/lib.js:21:1511)][0m
    [2m[at Ee (/Users/arunsudhaveni/Desktop/MY PORTFLIO/node_modules/tailwindcss/dist/lib.js:16:37066)][0m
    [2m[at /Users/arunsudhaveni/Desktop/MY PORTFLIO/node_modules/tailwindcss/dist/lib.js:21:355][0m
    [2m[at _r (/Users/arunsudhaveni/Desktop/MY PORTFLIO/node_modules/tailwindcss/dist/lib.js:3:1733)][0m
    [2m[at I (/Users/arunsudhaveni/Desktop/MY PORTFLIO/node_modules/tailwindcss/dist/lib.js:3:1377)][0m
    [2m[at Te (/Users/arunsudhaveni/Desktop/MY PORTFLIO/node_modules/tailwindcss/dist/lib.js:21:172)][0m
    [2m[at mn (/Users/arunsudhaveni/Desktop/MY PORTFLIO/node_modules/tailwindcss/dist/lib.js:38:294)][0m
    [2m[at async gn (/Users/arunsudhaveni/Desktop/MY PORTFLIO/node_modules/tailwindcss/dist/lib.js:38:631)][0m
    [2m[at async Xr (/Users/arunsudhaveni/Desktop/MY PORTFLIO/node_modules/@tailwindcss/node/dist/index.js:10:3416)][0m
    [2m[at async N (/Users/arunsudhaveni/Desktop/MY PORTFLIO/node_modules/@tailwindcss/postcss/dist/index.js:10:3979)][0m

> Build error occurred
Error: Turbopack build failed with 2 errors:
./src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: /Users/arunsudhaveni/Desktop/MY PORTFLIO/src/app/globals.css:1:1: Cannot apply unknown utility class `before:rounded-inherit`
    at Input.error (node_modules/postcss/lib/input.js:135:16) [/Users/arunsudhaveni/Desktop/MY PORTFLIO/.next/build/chunks/node_modules_13sb.px._.js:4652:22]
    at error (node_modules/postcss/lib/node.js:146:32) [/Users/arunsudhaveni/Desktop/MY PORTFLIO/.next/build/chunks/node_modules_13sb.px._.js:928:38]
    [at Object.Once (/Users/arunsudhaveni/Desktop/MY PORTFLIO/node_modules/@tailwindcss/postcss/dist/index.js:10:6913)]
    at async LazyResult.runAsync (node_modules/postcss/lib/lazy-result.js:293:11) [/Users/arunsudhaveni/Desktop/MY PORTFLIO/.next/build/chunks/node_modules_13sb.px._.js:6215:21]
    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [/Users/arunsudhaveni/Desktop/MY PORTFLIO/.next/build/chunks/[root-of-the-server]__0d-m0h0._.js:146:36]
    at async run (turbopack:///[turbopack-node]/child_process/evaluate.ts:89:23) [/Users/arunsudhaveni/Desktop/MY PORTFLIO/.next/build/chunks/[root-of-the-server]__0ubbtyl._.js:443:31]

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]


./src/components/layout/SmoothScroller.tsx:4:1
Module not found: Can't resolve 'lenis'
  [90m2 |[0m
  [90m3 |[0m [36mimport[0m { useEffect } [36mfrom[0m [32m"react"[0m;
[31m[1m>[0m [90m4 |[0m [36mimport[0m [33mLenis[0m [36mfrom[0m [32m"lenis"[0m;
  [90m  |[0m [31m[1m^^^^^^^^^^^^^^^^^^^^^^^^^^[0m
  [90m5 |[0m
  [90m6 |[0m [36mexport[0m [36mdefault[0m [36mfunction[0m [33mSmoothScroller[0m({
  [90m7 |[0m   children,



Import trace:
  Server Component:
    ./src/components/layout/SmoothScroller.tsx
    ./src/app/layout.tsx

https://nextjs.org/docs/messages/module-not-found


    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [/Users/arunsudhaveni/Desktop/MY PORTFLIO/.next/build/chunks/[root-of-the-server]__0d-m0h0._.js:146:36])
    at async run (turbopack:///[turbopack-node]/child_process/evaluate.ts:89:23) [/Users/arunsudhaveni/Desktop/MY PORTFLIO/.next/build/chunks/[root-of-the-server]__0ubbtyl._.js:443:31])
    at <unknown> (./src/components/layout/SmoothScroller.tsx:4:1)
    at <unknown> (https://nextjs.org/docs/messages/module-not-found)
